15741
That was hardly pithy. Perhaps this says it better.

{code}
 ~/code/scratch/testProj: cat TopLevelParent.java 
class TopLevelParent<A>{
    class I1 {}
    class I2 extends TopLevelParent.I1 {}
    
    // OKAY:
    class I3 extends I1 {}
    static class I4 {}
    static class I5 extends TopLevelParent.I4 {}
}

 ~/code/scratch/testProj: cat UseTopLevelParent.scala 
object UseTopLevelParent {
  classOf[TopLevelParent[AnyRef]#I2]
  
  // OKAY
  classOf[TopLevelParent[AnyRef]#I3]
  classOf[TopLevelParent.I5]
}
 ~/code/scratch/testProj: scalac TopLevelParent.java UseTopLevelParent.scala 
TopLevelParent.java:3: error: [A]TopLevelParent[A] is not a legal prefix for a constructor
    class I2 extends TopLevelParent.I1 {}
                                    ^
one error found
 ~/code/scratch/testProj: javac -d out TopLevelParent.java 
 ~/code/scratch/testProj: scalac -d out -classpath out UseTopLevelParent.scala 
{code}

This stems from the report on the mailing lists / [http://youtrack.jetbrains.net/issue/SCL-2444 bug] lodged against the IntelliJ plugin from Alec Zorab.
